--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "тестовый пример": "test example",
   "перевод": "translate",
   "Главная страница": "Main page",
-  "Язык": "English"
+  "Язык": "English",
+  "Страница не найдена": "Page not found"
 }
