--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,6 @@
   "тестовый пример": "тестовый пример",
   "перевод": "перевод",
   "Главная страница": "Главная страница",
-  "Язык": "Русский"
+  "Язык": "Русский",
+  "Страница не найдена": "Страница не найдена"
 }
