add new input, add login form ui

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,7 @@
   "О сайте": "About us",
   "Переключить": "Переключить",
   "Короткий язык": "En",
-  "decrement": "decrement"
+  "decrement": "decrement",
+  "Введите username": "Введите username",
+  "Введите пароль": "Введите пароль"
 }
