add login module

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,7 +12,11 @@
   "О сайте": "О сайте",
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
+  "Войти": "Войти",
   "decrement": "decrement",
   "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите пароль": "Введите пароль",
+  "Форма авторизации": "Форма авторизации",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Выйти": "Выйти"
 }
