--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,7 +12,11 @@
   "О сайте": "About us",
   "Переключить": "Переключить",
   "Короткий язык": "En",
+  "Войти": "Login",
   "decrement": "decrement",
-  "Введите username": "Введите username",
-  "Введите пароль": "Введите пароль"
+  "Введите username": "Enter username",
+  "Введите пароль": "Enter password",
+  "Форма авторизации": "Auth form",
+  "Вы ввели неверный логин или пароль": "Uncorrect username or password",
+  "Выйти": "Выйти"
 }
