--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,6 +1,14 @@
 {
-  "Профиль": "Профиль",
-  "Редактировать": "Редактировать",
-  "Ваше имя": "Ваше имя",
-  "Ваша фамилия": "Ваша фамилия"
+  "Профиль": "Profile",
+  "Редактировать": "Edit",
+  "Ваша фамилия": "Your lastname",
+  "Ваше имя": "Your name",
+  "Произошла ошибка при загрузке профиля": "Upload error",
+  "Попробуйте обновить страницу": "Try to update page",
+  "Отменить": "Cancel",
+  "Сохранить": "Save",
+  "Город": "City",
+  "Ваш возраст": "Your age",
+  "Введите имя пользователя": "Input username",
+  "Введите ссылку на аватар": "Input avatar link"
 }
