add tests for profile module, fix screens

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -10,5 +10,10 @@
   "Город": "City",
   "Ваш возраст": "Your age",
   "Введите имя пользователя": "Input username",
-  "Введите ссылку на аватар": "Input avatar link"
+  "Введите ссылку на аватар": "Input avatar link",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении"
 }
