--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -10,5 +10,10 @@
   "Ваш возраст": "Ваш возраст",
   "Город": "Город",
   "Введите имя пользователя": "Введите имя пользователя",
-  "Введите ссылку на аватар": "Введите ссылку на аватар"
+  "Введите ссылку на аватар": "Введите ссылку на аватар",
+  "Данные не указаны": "Данные не указаны",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении"
 }
