add comment list

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,6 @@
   "Выйти": "Logout",
   "Укажите валюту": "Choose currency",
   "Укажите страну": "Choose country",
-  "Профиль": "Profile"
+  "Профиль": "Profile",
+  "Комментарии отсутсвуют": "No comments"
 }
