--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,5 +20,6 @@
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
   "Выйти": "Выйти",
   "Укажите валюту": "Укажите валюту",
-  "Укажите страну": "Укажите страну"
+  "Укажите страну": "Укажите страну",
+  "Комментарии отсутсвуют": "Комментарии отсутсвуют"
 }
