add comment form, user profiles

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,5 +21,7 @@
   "Выйти": "Выйти",
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
-  "Комментарии отсутсвуют": "Комментарии отсутсвуют"
+  "Комментарии отсутсвуют": "Комментарии отсутсвуют",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
