--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -22,5 +22,7 @@
   "Укажите валюту": "Choose currency",
   "Укажите страну": "Choose country",
   "Профиль": "Profile",
-  "Комментарии отсутсвуют": "No comments"
+  "Комментарии отсутсвуют": "No comments",
+  "Введите текст комментария": "Введите текст комментария",
+  "Отправить": "Отправить"
 }
