--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,4 +1,5 @@
 {
   "Статья не найдена": "Page not found",
-  "Комментарии": "Comments"
+  "Комментарии": "Comments",
+  "Назад к списку": "Назад к списку"
 }
