--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -24,5 +24,7 @@
   "Профиль": "Profile",
   "Комментарии отсутсвуют": "No comments",
   "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Читать далее": "Читать далее",
+  "Статьи": "Articles"
 }
