--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,5 +23,7 @@
   "Укажите страну": "Укажите страну",
   "Комментарии отсутсвуют": "Комментарии отсутсвуют",
   "Введите текст комментария": "Введите текст комментария",
-  "Отправить": "Отправить"
+  "Отправить": "Отправить",
+  "Читать далее": "Читать далее",
+  "Статьи": "Статьи"
 }
