--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,5 +26,16 @@
   "Введите текст комментария": "Введите текст комментария",
   "Отправить": "Отправить",
   "Читать далее": "Читать далее",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "Поиск": "Поиск",
+  "возрастанию": "возрастанию",
+  "убыванию": "убыванию",
+  "по": "по",
+  "дате создания": "дате создания",
+  "названию": "названию",
+  "просмотрам": "просмотрам",
+  "Айти": "Айти",
+  "Все статьи": "Все статьи",
+  "Экономика": "Экономика",
+  "Наука": "Наука"
 }
