60 add recommendations articles for article details page

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -1,5 +1,6 @@
 {
   "Статья не найдена": "Page not found",
   "Комментарии": "Comments",
-  "Назад к списку": "Назад к списку"
+  "Назад к списку": "Назад к списку",
+  "Рекомендуем": "Рекомендуем"
 }
