61 add create, edit page routes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,5 +37,8 @@
   "Айти": "Айти",
   "Все статьи": "Все статьи",
   "Экономика": "Экономика",
-  "Наука": "Наука"
+  "Наука": "Наука",
+  "Создание новой статьи": "Создание новой статьи",
+  "Редактирование статьи с ID = ": "Редактирование статьи с ID = ",
+  "Создать статью": "Создать статью"
 }
